--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </button>
                     </div>
                     <div class="slider-image">
-                        <img src="/image/my-photo.png" alt="MyFoto" />
+                        <img src="image/my-photo.png" alt="MyFoto" />
                     </div>
                 </div>
             </div>
@@ -123,9 +123,9 @@
                     <div class="spinner spinner-yellow"></div>
                     <div class="spinner spinner-white"></div>
                     <div class="spinner spinner-blue"></div>
-                    <img class="about-img image-1" src="/image/about1.jpg" width="272" height="320" alt="about-img" />
-                    <img class="about-img image-2" src="/image/about2.jpg" width="287" height="427" alt="about-img" />
-                    <img class="about-img image-3" src="/image/about3.jpg" width="250" height="281" alt="about-img" />
+                    <img class="about-img image-1" src="image/about1.jpg" width="272" height="320" alt="about-img" />
+                    <img class="about-img image-2" src="image/about2.jpg" width="287" height="427" alt="about-img" />
+                    <img class="about-img image-3" src="image/about3.jpg" width="250" height="281" alt="about-img" />
 
 
                 </div>
