--- a/index.html
+++ b/index.html
@@ -137,41 +137,54 @@
                 <div class="swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <div class="swiper-slide-image">
-                                <img src="image/image.jpg" alt="preview" />
-                            </div>
+                            <a class="swiper-slide-link" href="https://gla3nata.github.io/MNTN/">
+                                <img src="image/work-1.jpg" alt="preview" />
+                            </a>
                             <div class="swiper-slide-text">
-                                <h4 class="swiper-slide-title">Landing Ice-cream</h4>
+                                <h3 class="swiper-slide-title">Блог о походах и путешествиях</h3>
                                 <p class="swiper-slide-description">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid veritatis eligendi ipsam recusandae, expedita blanditiis mollitia impedit laborum eius unde.
+                                   Параллакс эффект без библиотеки, по движению курсора.
                                 </p>
+                                 <p class="swiper-slide-description">
+                                   Плавный скрол страицы
+                                </p>
+                                <p class="swiper-slide-description">
+                                    Это руководство по уровням походов поможет вам спланировать походы
+                                </p>
+                                <p class="swiper-slide-description">Адаптивная вёрстка</p>
+                                 <a class="link" href="https://gla3nata.github.io/MNTN/">Посмотреть</a>
                             </div>
 
                         </div>
                         <div class="swiper-slide">
-                            <div class="swiper-slide-image">
-                                <img src="image/space.jpg" alt="preview" />
-                            </div>
+                              <a class="swiper-slide-link" href="https://gla3nata.github.io/space/">
+                                 <img src="image/work-2.jpg" alt="preview" />
+                            </a>
                             <div class="swiper-slide-text">
-                                <h4 class="swiper-slide-title">Космический туризм</h4>
-                                <p class="swiper-slide-description">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid veritatis eligendi ipsam recusandae, expedita blanditiis mollitia impedit laborum eius unde.
-                                </p>
+                                <h4 class="swiper-slide-title">Landing Космический туризм</h4>
+                                <p class="swiper-slide-description">Верстка оп БЭМ</p>
+                                <p class="swiper-slide-description">Для слайдера использован Slider Slik</p>
+                                <p class="swiper-slide-description">Эфект наведения на ымп картинку</p>
+                                <p class="swiper-slide-description">Адаптивная вёрстка</p>
+                                 <a class="link" href="https://gla3nata.github.io/space/">Посмотреть</a>
                             </div>
 
                         </div>
                         <div class="swiper-slide">
-                            <div class="swiper-slide-image">
-                                <img src="image/MNTN.jpg" alt="preview" />
-                            </div>
+                            <a class="swiper-slide-link" href="https://gla3nata.github.io/counter/">
+                                  <img src="image/work-3.jpg" alt="preview" />
+                            </a>
                             <div class="swiper-slide-text">
-                                <h4 class="swiper-slide-title">Горы</h4>
+                                <h4 class="swiper-slide-title">Счетчик</h4>
                                 <p class="swiper-slide-description">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid veritatis eligendi ipsam recusandae, expedita blanditiis mollitia impedit laborum eius unde.
+                                    Задача рабочая. Необходимо при переключении значений в input менять значение итоговой суммы
                                 </p>
-                            </div>
+                                 <p class="swiper-slide-description">
+                                    Добавлен плавный перебор цифр до нужной.
+                                </p>
+                              <a class="link" href="https://gla3nata.github.io/counter/">Посмотреть</a>
                         </div>
-                        ...
+                     </div>
                     </div>
                     <!-- If we need pagination -->
                     <div class="swiper-pagination"></div>
