--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
                                  <p class="swiper-slide-description">
                                     Добавлен плавный перебор цифр до нужной.
                                 </p>
-                              <a class="link" href="https://gla3nata.github.io/counter/">Посмотреть</a>
+                              <a class="link" href="https://gla3nata.github.io/counter/">
+                                  <span>Посмотреть</span></a>
                         </div>
                      </div>
                     </div>
@@ -228,7 +229,7 @@
                         <path d="M14.6042 40H44.3959L29.5 27L14.6042 40Z" stroke="#00C1EC" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
                         <path d="M13.25 24L29.5 2L45.75 24" stroke="#00C1EC" stroke-width="4" stroke-linejoin="round" />
                     </svg>
-                    <span>MyWork</span>
+                    <span class="logo-link-text">MyWork</span>
                 </a>
                 <p class="copyright">Copyright &copy;&nbsp;2021, Notitanic</p>
             </div>
