--- a/index.html
+++ b/index.html
@@ -56,10 +56,8 @@
                             Вам нужен дизайн сайта, верстка сайта, а может сайт под ключ?
                             Тогда свяжитесь со мной
                         </p>
-                        <button class="button">
-                            <span class="button-text">Связаться со мной</span>
-                        </button>
-                        
+                        <a class="link" href=" https://wa.me/+79502144141" target="blank">
+                                 Связаться со мной</a>
                     </div>
                     <div class="slider-image">
                         <img src="image/my-photo.png" alt="MyFoto" />
