--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                             </a>
                             <div class="swiper-slide-text">
                                 <h4 class="swiper-slide-title">Landing Космический туризм</h4>
-                                <p class="swiper-slide-description">Верстка оп БЭМ</p>
+                                <p class="swiper-slide-description">Верстка по БЭМ</p>
                                 <p class="swiper-slide-description">Для слайдера использован Slider Slik</p>
                                 <p class="swiper-slide-description">Эфекты наведения</p>
                                 <p class="swiper-slide-description">Адаптивная вёрстка</p>
