--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
                             <p class="about-deskr__txt"> Привет всем!</p>
                             <p class="about-deskr__txt">Итак, немного о себе: живу в России, г.Омск.</p>
                             <p class="about-deskr__txt">Два года назад решила сменить свою профессию.</p>
-                            <p class="about-deskr__txt">C детства люблю заниматься творчеством. Свободное время посвещаю самообразованию, спорту и путешествиям. </p>
                             <p class="about-deskr__txt">Почему Web-разработка? Все элементарно - мне это нравится,
                                 профессия будущего, благодаря которой я могу обеспечить себя и
                                 осуществить свою мечту — работать удаленно из любой точки мира.</p>
@@ -114,7 +113,7 @@
                             <p class="about-deskr__txt"> Почему вы должны выбрать меня? К каждому заказу
                                 подхожу с большой ответственностью и любовью, так как хочу
                                 сделать проект максимально качественно, чтобы результат работы нравился мне и заказчику, приносил пользу и новых клиентов. 
-                                Стараюсь сделать заказ максимально быстро и уникально
+                                Стараюсь сделать заказ максимально быстро и уникально,
                                 по возможности с учетом всех правок и пожеланий. Если вы
                                 заинтересовались мной, хотите узнать что-то еще или
                                 воспользоваться моими услугами, то ниже я предоставлю все свои
