--- a/index.html
+++ b/index.html
@@ -168,7 +168,6 @@
                                 <p class="swiper-slide-description">Адаптивная вёрстка</p>
                                  <a class="link" href="https://gla3nata.github.io/space/">Посмотреть</a>
                             </div>
-
                         </div>
                         <div class="swiper-slide">
                             <a class="swiper-slide-link" href="https://gla3nata.github.io/counter/" target="_blank">
@@ -179,13 +178,28 @@
                                 <p class="swiper-slide-description">
                                     Рабочая задача. Необходимо при переключении значений в input менять значение итоговой суммы
                                 </p>
+                                <p class="swiper-slide-description">
+                                    Выполненно на JavaScript
+                                </p>
                                  <p class="swiper-slide-description">
                                     Добавлен плавный перебор цифр до нужной.
                                 </p>
                               <a class="link" href="https://gla3nata.github.io/counter/">
                                   <span>Посмотреть</span></a>
+                            </div>
                         </div>
-                     </div>
+                        <div class="swiper-slide">
+                            <a class="swiper-slide-link" href="https://jbeauty-studio.ru/" target="_blank">
+                               <img src="image/work-4.jpg" alt="preview" />
+                            </a>
+                            <div class="swiper-slide-text">
+                                <h4 class="swiper-slide-title">Сайт для салона красоты</h4>
+                                <p class="swiper-slide-description">Одна из коммерческих работ</p>
+                                <p class="swiper-slide-description">Работа в CMS</p>
+                                <a class="link" href="https://jbeauty-studio.ru/">Посмотреть</a>
+                            </div>
+                        </div>
+                    
                     </div>
                   
                     <div class="swiper-pagination"></div>
