--- a/index.html
+++ b/index.html
@@ -50,28 +50,25 @@
                     </ul>
                 </nav>
             </div>
-        </div>
-        <section class="slider">
-            <div class="container">
-                <div class="slider-inner">
+            <section class="slider">
+                <div class="slider__inner">
+                    <div class="slider__wrapper">
+                        <h2 class="slide__title">
+                            Привет! <br>
+                            Меня зовут Наталья. </h2>
+                        <p class="slide__txt">
+                            Разрабатываю веб-сайты.
+                        </p>
 
-                    <div class="slider-wrapper">
-                        <span class="slide-subtitle">Привет</span>
-                        <h2 class="slide-title">Я Наталья</h2>
-                        <p class="slide__txt">
-                            Занимаюсь фронтенд разработкой уже второй год.
-                        </p>
-                        <p class="slide__txt">
-                            Вам нужен дизайн сайта, верстка сайта, а может сайт под ключ?
-                            Тогда свяжитесь со мной
-                        </p>
                         <a class="link" href="tel:+79502144141">Связаться со мной</a>
                     </div>
                     <div class="slider-box">
                         <img class="slider-image" src="image/my-photo.png" alt="MyFoto" />
                     </div>
                 </div>
-        </section>
+            </section>
+        </div>
+
 
     </header>
     <main class="main">
@@ -111,14 +108,13 @@
                     <div class="about-text">
                         <h2 class="about-title">Обо мне</h2>
                         <div class="about-descr">
-                            <p class="about-deskr__txt"> Привет всем!</p>
-                            <p class="about-deskr__txt">Итак, немного о себе: живу в России, г.Омск.</p>
+                            <p class="about-deskr__txt">Итак, я живу в России, г.Омск.</p>
                             <p class="about-deskr__txt">Два года назад решила сменить свою профессию.</p>
                             <p class="about-deskr__txt">Почему Web-разработка? Все элементарно - мне это нравится,
                                 профессия будущего, благодаря которой я могу обеспечить себя и
                                 осуществить свою мечту — работать удаленно из любой точки мира.</p>
                             <p class="about-deskr__txt">На данный момент я специализируюсь на front-end разработке.</p>
-                            <p class="about-deskr__txt"> Почему вы должны выбрать меня? К каждому заказу
+                            <p class="about-deskr__txt"> К каждому заказу
                                 подхожу с большой ответственностью и любовью, так как хочу
                                 сделать проект максимально качественно, чтобы результат работы нравился мне и заказчику,
                                 приносил пользу и новых клиентов.
