--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                     <div class="about-text">
                         <h2 class="about-title">Обо мне</h2>
                         <div class="about-descr">
-                            <p class="about-deskr__txt">Итак, я живу в России, г.Омск.</p>
-                            <p class="about-deskr__txt">Два года назад решила сменить свою профессию.</p>
+                            <p class="about-deskr__txt">Итак, мне 35, живу в России, г.Омск.</p>
+                            <p class="about-deskr__txt">Пару лет назад, решила сменить свою профессию.</p>
                             <p class="about-deskr__txt">Почему Web-разработка? Все элементарно - мне это нравится,
                                 профессия будущего, благодаря которой я могу обеспечить себя и
                                 осуществить свою мечту — работать удаленно из любой точки мира.</p>
