--- a/index.html
+++ b/index.html
@@ -205,6 +205,18 @@
                                 <a class="link" href="https://jbeauty-studio.ru/">Посмотреть</a>
                             </div>
                         </div>
+                        <div class="swiper-slide">
+                            <a class="swiper-slide-link" href="https://gla3nata.github.io/scooter/" target="_blank">
+                                <img src="image/work-5.jpg" alt="preview" />
+                            </a>
+                            <div class="swiper-slide-text">
+                                <h4 class="swiper-slide-title">Landing продажа мотоскутеров</h4>
+                                <p class="swiper-slide-description">Верстка по БЭМ. Слайдер, эфекты навердения,
+                                    адаптивная верстка</p>
+                                <p class="swiper-slide-description">Макет и цены вымышеные</p>
+                                <a class="link" href="https://jbeauty-studio.ru/">Посмотреть</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="works">
